# EchoShereAIvCPU

./: CONTRIBUTING.md  LICENCE.md  README.md  pyproject.toml  test_isolate.py
echosphere/: __init__.py  core.py
echosphere.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
echosphere/cognitive/: __init__.py  workspace.py
echosphere/execution/: __init__.py
echosphere/memory/: __init__.py  memory_ksa.py  vsa.py
echosphere/monitoring/: __init__.py
echosphere/utils/: logging.py
echosphere/verification/: __init__.py
examples/: basic_demo.py
scripts/: build.py
tests/: __init__.py
tests/integration/: __init__.py  test_cognitive_flow.py
tests/unit/: __init__.py  test_core.py  test_vsa.py
